--- a/www/views/base/base.html
+++ b/www/views/base/base.html
@@ -21,6 +21,9 @@
 				<ion-item nav-clear menu-close ui-sref="app.start">
 					Start Page
 				</ion-item>
+				<ion-item nav-clear menu-close ui-sref="app.css">
+					CSS
+				</ion-item>
 			</ion-list>
 		</ion-content>
 	</ion-side-menu>
