--- a/www/views/menu/menu.html
+++ b/www/views/menu/menu.html
@@ -24,6 +24,9 @@
 				<ion-item nav-clear menu-close ui-sref="app.css">
 					CSS
 				</ion-item>
+				<ion-item nav-clear menu-close ui-sref="app.action-sheet">
+					Action Sheet
+				</ion-item>
 			</ion-list>
 		</ion-content>
 	</ion-side-menu>
