--- a/www/views/menu/menu.html
+++ b/www/views/menu/menu.html
@@ -27,6 +27,9 @@
 				<ion-item nav-clear menu-close ui-sref="app.action-sheet">
 					Action Sheet
 				</ion-item>
+				<ion-item nav-clear menu-close ui-sref="app.backdrop">
+					Backdrop
+				</ion-item>
 			</ion-list>
 		</ion-content>
 	</ion-side-menu>
