The content and scrolling view

--- a/www/views/menu/menu.html
+++ b/www/views/menu/menu.html
@@ -30,6 +30,9 @@
 				<ion-item nav-clear menu-close ui-sref="app.backdrop">
 					Backdrop
 				</ion-item>
+				<ion-item nav-clear menu-close ui-sref="app.content">
+					Content (& scroll)
+				</ion-item>
 			</ion-list>
 		</ion-content>
 	</ion-side-menu>
