--- a/www/styles/style.css
+++ b/www/styles/style.css
@@ -1,1 +1,11 @@
-/* Empty. Add your own CSS if you like */
+/* Colours view */
+[view-title="Colours"] .scroll {
+	min-height: 100%;
+	height: 100%;
+}
+
+[view-title="Colours"] .list {
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+}
