--- a/www/views/menu/menu.html
+++ b/www/views/menu/menu.html
@@ -33,6 +33,9 @@
 				<ion-item nav-clear menu-close ui-sref="app.content">
 					Content (& scroll)
 				</ion-item>
+				<ion-item nav-clear menu-close ui-sref="app.colours">
+					Colours
+				</ion-item>
 			</ion-list>
 		</ion-content>
 	</ion-side-menu>
