--- a/www/views/menu/menu.html
+++ b/www/views/menu/menu.html
@@ -36,6 +36,9 @@
 				<ion-item nav-clear menu-close ui-sref="app.colours">
 					Colours
 				</ion-item>
+				<ion-item nav-clear menu-close ui-sref="app.events">
+					Events
+				</ion-item>
 			</ion-list>
 		</ion-content>
 	</ion-side-menu>
