--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -21,3 +21,7 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 // Include all of Ionic
 @import "www/lib/ionic/scss/ionic";
 
+@import "mixins";
+@import "animations";
+
+@import "views/colours";
