--- a/www/views/menu/menu.html
+++ b/www/views/menu/menu.html
@@ -39,6 +39,9 @@
 				<ion-item nav-clear menu-close ui-sref="app.events">
 					Events
 				</ion-item>
+				<ion-item nav-clear menu-close ui-sref="app.modal">
+					Modals
+				</ion-item>
 			</ion-list>
 		</ion-content>
 	</ion-side-menu>
