--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -19,9 +19,10 @@ $dark:                            #444 !default;
 $ionicons-font-path: "../lib/ionic/fonts" !default;
 
 // Include all of Ionic
-@import "www/lib/ionic/scss/ionic";
+@import "../www/lib/ionic/scss/ionic";
 
 @import "mixins";
 @import "animations";
 
-@import "views/colours";
+@import "views/_colours";
+@import "views/_slide-box";
