--- a/www/views/menu/menu.html
+++ b/www/views/menu/menu.html
@@ -42,6 +42,9 @@
 				<ion-item nav-clear menu-close ui-sref="app.modal">
 					Modals
 				</ion-item>
+				<ion-item nav-clear menu-close ui-sref="app.slide-box">
+					Slide Box
+				</ion-item>
 			</ion-list>
 		</ion-content>
 	</ion-side-menu>
