--- a/www/views/slide-box/slide-box.html
+++ b/www/views/slide-box/slide-box.html
@@ -1,4 +1,12 @@
 <ion-view view-title="slide-box">
+	<ion-nav-buttons side="secondary">
+		<button class="button"><i class="icon ion-music-note"></i></button>
+		<button class="button"><i class="icon ion-eye"></i></button>
+	</ion-nav-buttons>
+	<ion-nav-title>
+		Custom title
+	</ion-nav-title>
+
 	<ion-content scroll="false">
 		<ion-slide-box does-continue="true" show-pager="true" pager-click="ctrl.changeSlide(index)"
 					   class="slides-container" delegate-handle="slider">
