--- a/www/views/start/start.html
+++ b/www/views/start/start.html
@@ -1,5 +1,6 @@
 <ion-view view-title="Start">
-	<ion-content>
+	<ion-content class="padding">
 		<h1>Start Page</h1>
+		<button ng-click="ctrl.toggleNavBar()" class="button button-positive button-block">Toggle Bar</button>
 	</ion-content>
 </ion-view>
