Popup and popover

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -22,7 +22,7 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 @import "../www/lib/ionic/scss/ionic";
 
 @import "mixins";
-@import "animations";
+//@import "animations";
 
 @import "views/_colours";
 @import "views/_slide-box";
