--- a/www/views/menu/menu.html
+++ b/www/views/menu/menu.html
@@ -45,6 +45,9 @@
 				<ion-item nav-clear menu-close ui-sref="app.slide-box" nav-transition="ios">
 					Slide Box
 				</ion-item>
+				<ion-item nav-clear menu-close ui-sref="app.popover-popup">
+					Popover & Popup
+				</ion-item>
 			</ion-list>
 		</ion-content>
 	</ion-side-menu>
