nav-clearnot required when menu-close directive is present.

--- a/www/views/menu/menu.html
+++ b/www/views/menu/menu.html
@@ -18,34 +18,34 @@
 		</ion-header-bar>
 		<ion-content>
 			<ion-list>
-				<ion-item nav-clear menu-close ui-sref="app.start" nav-direction="forward">
+				<ion-item menu-close ui-sref="app.start" nav-direction="forward">
 					Start Page
 				</ion-item>
-				<ion-item nav-clear menu-close ui-sref="app.css" nav-direction="back">
+				<ion-item menu-close ui-sref="app.css" nav-direction="back">
 					CSS
 				</ion-item>
-				<ion-item nav-clear menu-close ui-sref="app.action-sheet" nav-direction="enter">
+				<ion-item menu-close ui-sref="app.action-sheet" nav-direction="enter">
 					Action Sheet
 				</ion-item>
-				<ion-item nav-clear menu-close ui-sref="app.backdrop" nav-direction="exit">
+				<ion-item menu-close ui-sref="app.backdrop" nav-direction="exit">
 					Backdrop
 				</ion-item>
-				<ion-item nav-clear menu-close ui-sref="app.content" nav-direction="swap">
+				<ion-item menu-close ui-sref="app.content" nav-direction="swap">
 					Content (& scroll)
 				</ion-item>
-				<ion-item nav-clear menu-close ui-sref="app.colours">
+				<ion-item menu-close ui-sref="app.colours">
 					Colours
 				</ion-item>
-				<ion-item nav-clear menu-close ui-sref="app.events">
+				<ion-item menu-close ui-sref="app.events">
 					Events
 				</ion-item>
-				<ion-item nav-clear menu-close ui-sref="app.modal" nav-transition="android">
+				<ion-item menu-close ui-sref="app.modal" nav-transition="android">
 					Modals
 				</ion-item>
-				<ion-item nav-clear menu-close ui-sref="app.slide-box" nav-transition="ios">
+				<ion-item menu-close ui-sref="app.slide-box" nav-transition="ios">
 					Slide Box
 				</ion-item>
-				<ion-item nav-clear menu-close ui-sref="app.popover-popup">
+				<ion-item menu-close ui-sref="app.popover-popup">
 					Popover & Popup
 				</ion-item>
 			</ion-list>
