--- a/www/views/menu/menu.html
+++ b/www/views/menu/menu.html
@@ -48,6 +48,9 @@
 				<ion-item menu-close ui-sref="app.popover-popup">
 					Popover & Popup
 				</ion-item>
+				<ion-item menu-close ui-sref="app.tabs">
+					Tab
+				</ion-item>
 			</ion-list>
 		</ion-content>
 	</ion-side-menu>
