--- a/www/views/start/start.html
+++ b/www/views/start/start.html
@@ -2,5 +2,6 @@
 	<ion-content class="padding">
 		<h1>Start Page</h1>
 		<button ng-click="ctrl.toggleNavBar()" class="button button-positive button-block">Toggle Bar</button>
+		<button ng-click="ctrl.toggleLoading()" class="button button-positive button-block">Toggle Loading</button>
 	</ion-content>
 </ion-view>
