--- a/www/views/menu/menu.html
+++ b/www/views/menu/menu.html
@@ -51,6 +51,9 @@
 				<ion-item menu-close ui-sref="app.tabs">
 					Tab
 				</ion-item>
+				<ion-item menu-close ui-sref="app.list">
+					List
+				</ion-item>
 			</ion-list>
 		</ion-content>
 	</ion-side-menu>
