--- a/www/views/start/start.html
+++ b/www/views/start/start.html
@@ -3,5 +3,6 @@
 		<h1>Start Page</h1>
 		<button ng-click="ctrl.toggleNavBar()" class="button button-positive button-block">Toggle Bar</button>
 		<button ng-click="ctrl.toggleLoading()" class="button button-positive button-block">Toggle Loading</button>
+		<button ui-sref="drawer" class="button button-positive button-block">Go to drawer view</button>
 	</ion-content>
 </ion-view>
