--- a/www/views/menu/menu.html
+++ b/www/views/menu/menu.html
@@ -54,6 +54,9 @@
 				<ion-item menu-close ui-sref="app.list">
 					List
 				</ion-item>
+				<ion-item menu-close ui-sref="app.ions">
+					Ions
+				</ion-item>
 			</ion-list>
 		</ion-content>
 	</ion-side-menu>
